React Hooks useState()

--- a/public/index.css
+++ b/public/index.css
@@ -82,6 +82,12 @@
     flex-wrap: wrap;
   }
  
+  .btn-cls{
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
  
   
  
