--- a/public/index.css
+++ b/public/index.css
@@ -22,17 +22,19 @@
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
+    flex-wrap: wrap ;
   }
   .logo{
     width: 100px;
     padding: 15px
   }
-  .nav-conatainer > ul {
+  .nav-container > ul {
     display: flex;
     list-style: none;
+    flex-wrap: wrap ;
     font-size: 18px;
   }
-  .nav-conatainer > ul >li{
+  .nav-container > ul >li{
     padding: 10px;
     margin: 10px;
   }
@@ -95,15 +97,16 @@
     justify-content: right;
   }
 
+  .input-container{
+    border: 1px solid black;
+    width: 50%;
+    margin: 5px;
+    /* height: 50px; */
+  }
   .input{
     padding: 5px;
     margin: 5px;
-  }
-
-  .Loading{
-    display: flex;
-    justify-content: center;
-    margin-top: 200px;
+    border: 0px;
   }
 
   .nodata{
@@ -113,7 +116,23 @@
     font-size: 25px;
   }
  
+  .shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 25px;
+  }
+  .shimmer-cards{
+    margin: 20px;
+    width: 225px; 
+    height: 125px;
+    background-color: #f0f0f0;
+  }
   
+  .lgnbtn{
+    margin-top: 18px;
+    padding:0 5px;
+    height: 30px;
+  }
  
 
 
