--- a/public/index.css
+++ b/public/index.css
@@ -189,6 +189,11 @@ margin-top: 50px;
     background-color: red;
     border: 0;
   }
+  .usercard{
+    border: 1px solid black;
+    margin: 10px;
+    padding: 10px;
+  }
  
 
 
