--- a/public/index.css
+++ b/public/index.css
@@ -1,199 +1,3 @@
-/* login card*/
-.card{
-border: 1px solid black;
-background-color: #f0f0f0;
-width: 400px;
-height: 200px;
-margin-left: 165px;
-margin-top: 50px;
-}
-
-.submit{
-  display: flex;
-  justify-content: center;
-  padding-top: 45px;
-}
-.uname {
-  margin-top: 10px;
-}
-
-
-.bgcolors{
-    background-color: aqua;
-}
-#heading {
-    color: red;
-}
-
-.search-input {
-    width: 200px;
-    padding: 10px 30px; /* Add padding to the input */
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: url('./Assets/images/search-new.png') no-repeat 10px center; /* Adjust path */
-    background-size: 20px 20px; /* Size of the icon */
-  }
-  
-  .search-input::placeholder {
-    color: #aaa; /* Placeholder color */
-  }
-
-  .header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    flex-wrap: wrap ;
-  }
-  .logo{
-    width: 100px;
-    padding: 15px
-  }
-  .nav-container > ul {
-    display: flex;
-    list-style: none;
-    flex-wrap: wrap ;
-    font-size: 18px;
-  }
-  .nav-container > ul >li{
-    padding: 10px;
-    margin: 10px;
-  }
-
-
-  .res-card {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column; /* Stack the items vertically */
-    align-items: center; /* Center the content horizontally */
-    justify-content: space-between; /* Distribute space evenly */
-    margin: 10px;
-    width: 225px; /* Fixed width */
-    height: auto; /* Height will now adjust based on content */
-    background-color: #f0f0f0; /* Light grey background */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for elevation */
-    transition: border 0.3s, box-shadow 0.3s;
-    overflow: hidden;  /* Smooth transition on hover */
-    color: black;
-  }
-
-  .res-container-in {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: 60px;
-    margin-right: 60px;
-   height: 370px;
-   overflow: auto;
-  }
-  .res-card-in:hover {
-    cursor: pointer;
-  }
-  .res-card-in {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column; /* Stack the items vertically */
-    align-items: center; /* Center the content horizontally */
-    justify-content: space-between; /* Distribute space evenly */
-    margin: 10px;
-    height: auto; /* Height will now adjust based on content */
-    background-color: #f0f0f0; /* Light grey background */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for elevation */
-    transition: border 0.3s, box-shadow 0.3s;
-    overflow: hidden;  /* Smooth transition on hover */
-    color: black;
-  }
-  
-  
-
-  .res-card:hover {
-    color:blue;
-    cursor: pointer;
-   
-  }
-  .no-underline {
-    text-decoration: none;
-  }
-  
-  .res-logo {
-    width: 100px; 
-    height: auto; 
-    margin-bottom: 10px; 
-  }
-  
-  .res-card h2 {
-    font-size: 18px; 
-    margin: 5px 0;
-  }
-  
-  .res-card h3, .res-card h4 {
-    font-size: 14px; 
-    margin: 2px 0; 
-    font-weight: normal; 
-  }
-  
-  .res-container{
-    display: flex;
-    flex-wrap: wrap;
-  }
- 
-  .btn-cls{
-    display: flex;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-
-  .btn-cont{
-    display: flex;
-    justify-content: right;
-  }
-
-  .input-container{
-    border: 1px solid black;
-    width: 50%;
-    margin: 5px;
-    /* height: 50px; */
-  }
-  .input{
-    padding: 5px;
-    margin: 5px;
-    border: 0px;
-  }
-
-  .nodata{
-    display: flex;
-    justify-content: center;
-    margin-top: 150px;
-    font-size: 25px;
-  }
- 
-  .shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 25px;
-  }
-  .shimmer-cards{
-    margin: 20px;
-    width: 225px; 
-    height: 125px;
-    background-color: #f0f0f0;
-  }
-  
-  .lgnbtn{
-    margin-top: 18px;
-    padding:0 5px;
-    height: 30px;
-    color: #f0f0f0;
-    background-color: red;
-    border: 0;
-  }
-  .usercard{
-    border: 1px solid black;
-    margin: 10px;
-    padding: 10px;
-  }
- 
-
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
